k8s/nginxservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: apps
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
